# WMILib

./: CMakeLists.txt  README.md
src/: WMIlib.cpp  WMIlib.hpp  main.cpp
